--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "styled-components",
+  "name": "styled-components-course",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -11,11 +17,8 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "styled-components": "^5.3.3"
   },
   "eslintConfig": {
     "extends": [
